# swarmcorp

./: .gitignore  README.md  conftest.py  crucible_shadow.py  pyproject.toml
.github/workflows/: test.yml
crucible/: __init__.py  cli.py
crucible/adapters/: aria.py  base.py  momentum.py
crucible/core/: allocator.py  engine.py  ledger.py  lifecycle.py  memory.py  reaper.py  spawner.py  vocabulary.py
crucible/gate/: calibration.py  decision.py  gate.py  splitter.py  stats.py
crucible/research/: genome.py  insight.py  load_aria.py  propose.py  resolution.py
demos/: demo_nontrading.py  sample_strategies.csv
migrations/: 001_initial_schema.sql
tests/: test_allocator.py  test_engine.py  test_gate.py  test_lifecycle.py  test_momentum_adapter.py  test_reaper.py  test_spawner.py
